2010-10-07 belangeo <belangeo@gmail.com>

	* Added new object : MatrixMorph
	- rev 463

2010-10-04 mantaraya36 <mantaraya36@gmail.com>
		   belangeo	<belangeo@gmail.com>
	
	* Added offline rendering.
	- rev 452	

2010-09-30 belangeo	<belangeo@gmail.com>

	* Added support for wxPython toolkit. If wx is installed, pyo will
	  use it instead of Tk.
	- rev 442

2010-09-23 belangeo <belangeo@gmail.com>

	* Added new objet : Percent
	- rev 434
	
2010-09-21 belangeo	<belangeo@gmail.com>

	* Added support for Coreaudio backend.
	  Build with --use-coreaudio option.
	- rev 431
	
2010-09-17 mantaraya36 <mantaraya36@gmail.com>

	* Added support for Jack audio backend.
	  Build with --use-jack option.
	- rev 423

2010-09-16 belangeo <belangeo@gmail.com>

	* Added --use-double option to compile pyo in double version.
	It creates a new library, called _pyo64.so, in the same directory
	as _pyo.so. To use it, simply import pyo64 (from pyo64 import *).
	- rev 417.

2010-09-13 belangeo	<belangeo@gmail.com>
	
	* Added "dur" and "delay" arguments to play and out methods of PyoObject.
	- rev 413.
	
2010-09-06 belangeo <belangeo@gmail.com>

	* rev 390 - pyo 0.01 release.
	
	